sk update, add og, add favs

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,39 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#444444">
+		<link rel="shortcut icon" href="/assets/icons/favicon.ico">
+		<meta name="msapplication-TileColor" content="#444444">
+		<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
+		<meta name="theme-color" content="#444444">
+		
+		<!-- SOCIAL MEDIA -->
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:title" content="Photon" />
+		<meta
+			property="og:description"
+			content="An opensource portfolio of 3D scenes, experiments, and prototypes."
+		/>
+		<meta property="og:url" content="https://photon-alexwarnes.vercel.app/" />
+		<meta property="og:image" content="https://photon-alexwarnes.vercel.app/photon_og.png" />
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@a_warnes" />
+		<meta name="twitter:creator" content="@a_warnes" />
+		<meta name="twitter:title" content="Photon" />
+		<meta
+			name="twitter:description"
+			content="An opensource portfolio of 3D scenes, experiments, and prototypes."
+		/>
+		<meta name="twitter:image" content="https://photon-alexwarnes.vercel.app/photon_og.png" />
+		<meta name="twitter:image:alt" content="Photon" />
+
 		%sveltekit.head%
 	</head>
 	<body>
