--- a/src/app.html
+++ b/src/app.html
@@ -24,7 +24,7 @@
 			content="An opensource portfolio of 3D scenes, experiments, and prototypes."
 		/>
 		<meta property="og:url" content="https://photon-alexwarnes.vercel.app/" />
-		<meta property="og:image" content="https://photon-alexwarnes.vercel.app/photon_og.png" />
+		<meta property="og:image" content="https://photon-alexwarnes.vercel.app/assets/photon_og.png" />
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@a_warnes" />
@@ -34,7 +34,7 @@
 			name="twitter:description"
 			content="An opensource portfolio of 3D scenes, experiments, and prototypes."
 		/>
-		<meta name="twitter:image" content="https://photon-alexwarnes.vercel.app/photon_og.png" />
+		<meta name="twitter:image" content="https://photon-alexwarnes.vercel.app/assets/photon_og.png" />
 		<meta name="twitter:image:alt" content="Photon" />
 
 		%sveltekit.head%
