test svelte head again

--- a/src/app.html
+++ b/src/app.html
@@ -15,28 +15,7 @@
 		<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 		<meta name="theme-color" content="#444444">
 		
-		<!-- SOCIAL MEDIA -->
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
-		<meta property="og:title" content="Photon" />
-		<meta
-			property="og:description"
-			content="An opensource portfolio of 3D scenes, experiments, and prototypes."
-		/>
-		<meta property="og:url" content="https://photon-alexwarnes.vercel.app/" />
-		<meta property="og:image" content="https://photon-alexwarnes.vercel.app/assets/photon_og.png" />
-
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="@a_warnes" />
-		<meta name="twitter:creator" content="@a_warnes" />
-		<meta name="twitter:title" content="Photon" />
-		<meta
-			name="twitter:description"
-			content="An opensource portfolio of 3D scenes, experiments, and prototypes."
-		/>
-		<meta name="twitter:image" content="https://photon-alexwarnes.vercel.app/assets/photon_og.png" />
-		<meta name="twitter:image:alt" content="Photon" />
-
+		<!-- SOCIAL MEDIA add per page -->
 		%sveltekit.head%
 	</head>
 	<body>
